Styled the homepage

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Odin Recipes</title>
+    <link href='./css/main.css' rel='stylesheet'>
+    <title>The Odin Pizzeria</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1>The Odin Pizzeria</h1>
+    <p>A brutally good pizza is the sum of its parts!</p>
+    <img id='ascii-pizza' src='./img/pizza_by_bdutch_ddl68hl_cropped.png' alt='a juicy pepperoni pizza'>
+    <p>
+      <a id='pizza-crust' href='./recipes/pizza-crust.html'>Pizza Crust</a>
+      <a id='pizza-sauce' href=''>Pizza Sauce</a>
+      <a id='pizza-cheeses' href=''>Pizza Cheeses</a>
+    </p>
   </body>
 </html>
