Add ingrediants list

--- a/recipes/pizza-sauce.html
+++ b/recipes/pizza-sauce.html
@@ -4,10 +4,27 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link href='../css/main.css' rel='stylesheet'>
+    <style>
+      ul {
+        display: inline-block;
+        text-align: left;
+      }
+    </style>
     <title>Pizza Sauce</title>
   </head>
   <body>
     <h1>Pizza Sauce</h1>
     <img src='../img/mutti-peeled-tomatos.png' alt='can of mutti peeled tomatos'>
   </body>
+  <p>
+    Ingredients you will need:
+  <ul>
+    <li>Mutti Peeled Whole Tomatos</li>
+    <li>California Olive Ranch Extra Virgin Olive Oil Medium</li>
+    <li>Salt</li>
+    <li>Pepper</li>
+    <li>Crushed Red Pepper Flakes</li>
+    <li>Sugar</li>
+  </ul>
+  </p>
 </html>
