--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link href='./css/main.css' rel='stylesheet'>
-    <title>The Odin Pizzeria</title>
+    <title>Edward's Pizzeria</title>
   </head>
   <body>
-    <h1>The Odin Pizzeria</h1>
-    <p>A brutally good pizza is the sum of its parts!</p>
-    <img id='ascii-pizza' src='./img/pizza_by_bdutch_ddl68hl_cropped.png' alt='a juicy pepperoni pizza'>
+    <h1>Edward's Pizzeria</h1>
     <p>
       <a id='pizza-crust' href='./recipes/pizza-crust.html'>Pizza Crust</a>
-      <a id='pizza-sauce' href=''>Pizza Sauce</a>
-      <a id='pizza-cheeses' href=''>Pizza Cheeses</a>
+      <a id='pizza-sauce' href='./recipes/pizza-sauce.html'>Pizza Sauce</a>
+      <a id='pizza-cheeses' href='./recipes/pizza-cheeses.html'>Pizza Cheeses</a>
     </p>
+    <img src='./img/pizza_by_bdutch_ddl68hl_cropped.png' alt='a juicy pepperoni pizza'>
+    <p>A brutally good pizza is the sum of its parts!</p>
+    <p>A resource for people who like to make pizza at home.</p>
+
   </body>
 </html>
