--- a/recipes/pizza-sauce.html
+++ b/recipes/pizza-sauce.html
@@ -19,7 +19,7 @@
   <p>
     Ingredients you will need:
   <ul>
-    <li>Mutti Peeled Whole Tomatos</li>
+    <li>Mutti Peeled Whole Tomatoes</li>
     <li>California Olive Ranch Extra Virgin Olive Oil Medium</li>
     <li>Salt</li>
     <li>Pepper</li>
