Add home navigation

--- a/recipes/pizza-sauce.html
+++ b/recipes/pizza-sauce.html
@@ -14,6 +14,9 @@
   </head>
   <body>
     <h1>Pizza Sauce</h1>
+    <p>
+      <a href='../index.html'>Home</a>
+    </p>
     <img src='../img/mutti-peeled-tomatos.png' alt='can of mutti peeled tomatos'>
   </body>
   <p>
