Add levitating pizza gifs

--- a/recipes/pizza-cheeses.html
+++ b/recipes/pizza-cheeses.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Pizza Cheeses</h1>
-    <p><a href='../index.html'>Home</a></p>
+    <p><a class='home' href='../index.html'>Home</a></p>
     <img src='../img/Galbani-16oz-WMLM-Mozzarella-Cheese-72DPI_cropped.png'
       alt='galbani low moisture mozzarella cheese'>
   </body>
