--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Pizza Crust</h1>
-    <p><a href='../index.html'>Home</a></p>
+    <p><a class='home' href='../index.html'>Home</a></p>
   </body>
 </html>
