--- a/recipes/pizza-sauce.html
+++ b/recipes/pizza-sauce.html
@@ -15,7 +15,7 @@
   <body>
     <h1>Pizza Sauce</h1>
     <p>
-      <a href='../index.html'>Home</a>
+      <a class='home' href='../index.html'>Home</a>
     </p>
     <img src='../img/mutti-peeled-tomatos.png' alt='can of mutti peeled tomatos'>
   </body>
