--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link href='./css/main.css' rel='stylesheet'>
+    <style>
+      h1 {
+        display: inline-block;
+      }
+    </style>
     <title>Edward's Pizzeria</title>
   </head>
   <body>
+    <img src='./img/pizza_by_jackaloops_d82wdsk.gif' alt='levitating pizza'>
     <h1>Edward's Pizzeria</h1>
+    <img src='./img/pizza_by_jackaloops_d82wdsk.gif' alt='levitating pizza'>
     <p>
       <a id='pizza-crust' href='./recipes/pizza-crust.html'>Pizza Crust</a>
       <a id='pizza-sauce' href='./recipes/pizza-sauce.html'>Pizza Sauce</a>
@@ -16,6 +23,5 @@
     <img src='./img/pizza_by_bdutch_ddl68hl_cropped.png' alt='a juicy pepperoni pizza'>
     <p>A brutally good pizza is the sum of its parts!</p>
     <p>A resource for people who like to make pizza at home.</p>
-
   </body>
 </html>
