--- a/recipes/pizza-cheeses.html
+++ b/recipes/pizza-cheeses.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <h1>Pizza Cheeses</h1>
-    <p><a class='home' href='../index.html'>Home</a></p>
+    <p>
+      <a class='home' href='../index.html'>Home</a>
+      <a id='pizza-crust' href='./pizza-crust.html'>Pizza Crust</a>
+      <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
+      <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
+    </p>
     <img src='../img/Galbani-16oz-WMLM-Mozzarella-Cheese-72DPI_cropped.png'
       alt='galbani low moisture mozzarella cheese'>
   </body>
