--- a/recipes/pizza-sauce.html
+++ b/recipes/pizza-sauce.html
@@ -16,6 +16,9 @@
     <h1>Pizza Sauce</h1>
     <p>
       <a class='home' href='../index.html'>Home</a>
+      <a id='pizza-crust' href='./pizza-crust.html'>Pizza Crust</a>
+      <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
+      <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
     </p>
     <img src='../img/mutti-peeled-tomatos.png' alt='can of mutti peeled tomatos'>
   </body>
