--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>Pizza Crust</h1>
-    <p><a class='home' href='../index.html'>Home</a></p>
+    <p>
+      <a class='home' href='../index.html'>Home</a>
+      <a id='pizza-crust' href='./pizza-crust.html'>Pizza Crust</a>
+      <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
+      <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
+    </p>
   </body>
 </html>
