Add instructions to cook tomato sauce

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a id='pizza-cheeses' href='./recipes/pizza-cheeses.html'>Pizza Cheeses</a>
     </p>
     <img src='./img/pizza_by_bdutch_ddl68hl_cropped.png' alt='a juicy pepperoni pizza'>
-    <p>A pizza is the sum of its parts!</p>
-    <p>A resource for people who like to make pizza at home.</p>
+    <p><strong>A pizza is the sum of its parts!</strong></p>
+    <p>A <em>howto</em> resource for people who like to make pizza at home.</p>
   </body>
 </html>
