--- a/recipes/pizza-sauce.html
+++ b/recipes/pizza-sauce.html
@@ -5,7 +5,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link href='../css/main.css' rel='stylesheet'>
     <style>
-      ul {
+      ul,
+      ol {
         display: inline-block;
         text-align: left;
       }
@@ -25,12 +26,24 @@
   <p>
     Ingredients you will need:
   <ul>
-    <li>Mutti Peeled Whole Tomatoes</li>
-    <li>California Olive Ranch Extra Virgin Olive Oil Medium</li>
+    <li>Canned Peeled Whole Tomatoes</li>
+    <li>Extra Virgin Olive Oil</li>
     <li>Salt</li>
     <li>Pepper</li>
     <li>Crushed Red Pepper Flakes</li>
     <li>Sugar</li>
   </ul>
+  </p>
+  <p>
+  <ol>
+    <li>Open your can of tomatoes and put a strainer into a bowl and pour the can of tomatoes through the strainer.</li>
+    <li>Crush the tomatoes with your hands and pull out any green bits.</li>
+    <li>Put your tomatoes from the strainer into a bowl and use the left over tomato juices in the other bowl to create
+      a sauce consistency you like.</li>
+    <li>Add salt, pepper, sugar, and crushed red pepper flakes to taste.</li>
+    <li>Add a splash of olive oil. Olive oil is a must!</li>
+    <li>Mix everything together cover and let chill in the fridge. You do not need to cook your sauce the canned
+      tomatoes are already cooked. We just need to let the other ingredients marinate with the tomatoes.</li>
+  </ol>
   </p>
 </html>
