Add instructions for pizza crust

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src='./img/pizza_by_jackaloops_d82wdsk.gif' alt='levitating pizza'>
     <h1>Edward's Pizzeria</h1>
     <img src='./img/pizza_by_jackaloops_d82wdsk.gif' alt='levitating pizza'>
-    <p>Supercalifragilisticexpialidocious!</p>
+    <p>Version 1.0 | Stay tuned for version 2.0 where I teach you how to cook it :)</p>
     <p>
       <a id='pizza-crust' href='./recipes/pizza-crust.html'>Pizza Crust</a>
       <a id='pizza-sauce' href='./recipes/pizza-sauce.html'>Pizza Sauce</a>
