--- a/recipes/pizza-cheeses.html
+++ b/recipes/pizza-cheeses.html
@@ -17,7 +17,7 @@
     <img src='../img/Galbani-16oz-WMLM-Mozzarella-Cheese-72DPI_cropped.png'
       alt='galbani low moisture mozzarella cheese'>
     <p>
-      Ingredients you will need:
+      <strong>Ingredients you will need:</strong>
     <ul>
       <li>Low moisture whole milk mozzarella cheese</li>
       <li>Fontina</li>
@@ -26,6 +26,7 @@
     </ul>
     </p>
     <p>
+      <strong>Instructions:</strong>
     <ol>
       <li>Pick the cheese(s) you want, mozzarella should be the base cheese.</li>
       <li>Grate all your cheeses.</li>
