--- a/recipes/pizza-sauce.html
+++ b/recipes/pizza-sauce.html
@@ -17,7 +17,7 @@
     <img src='../img/mutti-peeled-tomatos.png' alt='can of mutti peeled tomatos'>
   </body>
   <p>
-    Ingredients you will need:
+    <strong>Ingredients you will need:</strong>
   <ul>
     <li>Canned Peeled Whole Tomatoes</li>
     <li>Extra Virgin Olive Oil</li>
@@ -28,6 +28,7 @@
   </ul>
   </p>
   <p>
+    <strong>Instructions:</strong>
   <ol>
     <li>Open your can of tomatoes and put a strainer into a bowl and pour the can of tomatoes through the strainer.</li>
     <li>Crush the tomatoes with your hands and pull out any green bits.</li>
