--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -14,5 +14,29 @@
       <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
       <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
     </p>
+    <img src='../img/levitating-pizza-crust.png' width='450' alt='levitating pizza crust'>
+    <p>
+      <strong>Ingredients you will need:</strong>
+    <ul>
+      <li>4 1/2 cups all purpose or bread flour</li>
+      <li>2 teaspoons salt</li>
+      <li>1 tablespoon yeast</li>
+      <li>1 1/2 cups of water</li>
+    </ul>
+    </p>
+    <p>
+      <strong>Instructions:</strong>
+    <ol>
+      <li>In a large bowl combine flour, salt, and yeast.</li>
+      <li>Mix in water and mix with your hands until everything is combined into a rough ball. It doesn't need to be
+        perfect.</li>
+      <li>Cover and let sit for 30 to 45 minutes to allow the dough to hydrate.</li>
+      <li>After that time has passed, uncover your bowl and knead the dough a few times recover.</li>
+      <li>Let sit until it is about doubled in size.</li>
+      <li>Cut the dough in half and save the other half by putting it in a sealed bowl in the freezer.</li>
+      <li>With the other half form back into a ball and let it rest.</li>
+      <li>When the dough is rested and looks relaxed it is ready to use.</li>
+    </ol>
+    </p>
   </body>
 </html>
