--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -14,7 +14,10 @@
       <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
       <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
     </p>
-    <img src='../img/levitating-pizza-crust.png' width='450' alt='levitating pizza crust'>
+    <img src='../img/levitating-pizza-crust.png' alt='levitating pizza crust'>
+    <p>
+      lol
+    </p>
     <p>
       <strong>Ingredients you will need:</strong>
     <ul>
