Add border around all pages

--- a/recipes/pizza-cheeses.html
+++ b/recipes/pizza-cheeses.html
@@ -14,7 +14,7 @@
       <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
       <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
     </p>
-    <img src='../img/Galbani-16oz-WMLM-Mozzarella-Cheese-72DPI_cropped.png'
+    <img src='../img/Galbani-16oz-WMLM-Mozzarella-Cheese-72DPI_cropped.png' width='250'
       alt='galbani low moisture mozzarella cheese'>
     <p>
       <strong>Ingredients you will need:</strong>
