--- a/test.html
+++ b/test.html
@@ -5,7 +5,25 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Viewport Height Test</title>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
+      body {
+        background-color: aqua;
+        border: solid 25px black;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        width: 100vw;
+        text-align: center;
+      }
+
+      h1 {
+        margin: 0;
+      }
     </style>
   </head>
   <body>
