--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a id='pizza-sauce' href='./recipes/pizza-sauce.html'>Pizza Sauce</a>
       <a id='pizza-cheeses' href='./recipes/pizza-cheeses.html'>Pizza Cheeses</a>
     </p>
-    <img src='./img/pizza_by_bdutch_ddl68hl_cropped.png' alt='a juicy pepperoni pizza'>
+    <img src='./img/pizza_by_bdutch_ddl68hl_cropped.png' width='350' alt='a juicy pepperoni pizza'>
     <p><strong>A pizza is the sum of its parts!</strong></p>
     <p>A <em>howto</em> resource for people who like to make pizza at home.</p>
   </body>
