--- a/recipes/pizza-sauce.html
+++ b/recipes/pizza-sauce.html
@@ -14,7 +14,7 @@
       <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
       <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
     </p>
-    <img src='../img/mutti-peeled-tomatos.png' alt='can of mutti peeled tomatos'>
+    <img src='../img/mutti-peeled-tomatos.png' width='200' alt='can of mutti peeled tomatos'>
   </body>
   <p>
     <strong>Ingredients you will need:</strong>
