Converted page links from p to nav container. Enabled flexbox.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>Edward's Pizzeria</h1>
     <img src='./img/pizza_by_jackaloops_d82wdsk.gif' alt='levitating pizza'>
     <p>Version 1.0 | Stay tuned for version 2.0 where I teach you how to cook it :)</p>
-    <p>
+    <nav>
       <a id='pizza-crust' href='./recipes/pizza-crust.html'>Pizza Crust</a>
       <a id='pizza-sauce' href='./recipes/pizza-sauce.html'>Pizza Sauce</a>
       <a id='pizza-cheeses' href='./recipes/pizza-cheeses.html'>Pizza Cheeses</a>
-    </p>
+    </nav>
     <img src='./img/pizza_by_bdutch_ddl68hl_cropped.png' width='350' alt='a juicy pepperoni pizza'>
     <p><strong>A pizza is the sum of its parts!</strong></p>
     <p>A <em>howto</em> resource for people who like to make pizza at home.</p>
