Convert recipe page navs to flexbox

--- a/recipes/pizza-crust.html
+++ b/recipes/pizza-crust.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <h1>Pizza Crust</h1>
-    <p>
+    <nav>
       <a class='home' href='../index.html'>Home</a>
       <a id='pizza-crust' href='./pizza-crust.html'>Pizza Crust</a>
       <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
       <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
-    </p>
+    </nav>
     <img src='../img/levitating-pizza-crust.png' width='350' alt='levitating pizza crust'>
     <p>
       lol
