--- a/recipes/pizza-cheeses.html
+++ b/recipes/pizza-cheeses.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <h1>Pizza Cheeses</h1>
-    <p>
+    <nav>
       <a class='home' href='../index.html'>Home</a>
       <a id='pizza-crust' href='./pizza-crust.html'>Pizza Crust</a>
       <a id='pizza-sauce' href='./pizza-sauce.html'>Pizza Sauce</a>
       <a id='pizza-cheeses' href='./pizza-cheeses.html'>Pizza Cheeses</a>
-    </p>
+    </nav>
     <img src='../img/Galbani-16oz-WMLM-Mozzarella-Cheese-72DPI_cropped.png' width='250'
       alt='galbani low moisture mozzarella cheese'>
     <p>
